wisecow-k8s/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: aditya81888/wisecow:c33877ed6b891f996b8058e93b450c82ebb8582a
          imagePullPolicy: Always
          ports:
            - containerPort: 4499
